[package]
name = "scfs-re"
description = "A simple specification for managing game data"
license = "GPL3"
repository = "https://github.com/spenito-git/SCFS-RE"
documentation = "https://github.com/spenito-git/SCFS-RE/README.md"
version = "0.1.0"
authors = ["Spencer Smith <spenny@geniuspiece.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
