[package]
name = "scgsm"
description = "A simple specification for managing game data"
license = "GPL-3.0"
repository = "https://github.com/spenito-git/SCGSM-RE"
documentation = "https://github.com/spenito-git/SCGSM-RE/blob/master/README.md"
version = "0.1.1"
authors = ["Spencer Smith <spenny@geniuspiece.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
